# dftutils

./: .gitignore  POSCAR_F_matched  POSCAR_I_matched  README.md  pyproject.toml  setup.py  update_or_install.sh
.github/workflows/: blank.yml
dftutils/: cli.py  neb.py  polarization.py  strain.py  utils.py
dftutils.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dftutils/cli/: __init__.py  match.py  neb.py  polarization.py  strain.py
dftutils/core/: dftutils.mplstyle  dftutils_backup.mplstyle  launching.py  matching.py  neb.py  polarization.py  polaron.py  strain.py  utils.py  vasp_run.py
dftutils/tests/: match_test.py  polarization_test.py  polaron_test.py  vasp_run_test.py
dftutils/tests/data/match/: POSCAR_F  POSCAR_I  POSCAR_L_F  POSCAR_L_F_matched  POSCAR_L_I  POSCAR_L_I_matched
dftutils/tests/data/polarization-scatter/00/: OUTCAR
dftutils/tests/data/polarization-scatter/01/: CONTCAR  OUTCAR
dftutils/tests/data/polarization-scatter/02/: POSCAR
dftutils/tests/data/polarization-scatter/03/: CONTCAR  OUTCAR
dftutils/tests/data/polarization-scatter/04/: CONTCAR
dftutils/tests/data/polarization-scatter/09/: OUTCAR
dftutils/tests/data/polarization-scatter/11/: CONTCAR
dftutils/tests/data/polarization-scatter/13/: OUTCAR
dftutils/tests/data/polaron/: 111.vasp  222.vasp  222.yaml  222_bdm.vasp  222_bdm.yaml
dftutils/tests/data/vasp_run/: INCAR  KPOINTS  POSCAR  POTCAR
src/dftutils/: neb.py  polarization.py  utils.py
src/dftutils/core/: utils.py
src/dftutils/neb/: neb.py
(+90 files in other folders)
